@startuml
title StrategyDesignPattern

package  User #FFAAFF
{
    class user
}

package StrategyDesignPattern
{
    class Hand
    {
        - Hand(int handvalue)
        - ~Hand()
        + static int HandValueRock = 0
        + static int HandValuePaper = 1
        + static int HandValueScisor = 2
        - static Hand* m_hand[3]
        - static std::string m_name[3]
        + static Hand* getHand(int handvalaue)
        + bool isStrongerThan(Hand *hand)
        + bool isWeakerThan(Hand *hand)
        + std::string toString(void)
        - int m_handvalue
        - int fight(Hand *hand)
    }

    class Player
    {
        + Player(std::string name, StrategyInterface *strategy)
        - std::string m_name
        - StrategyInterface *m_strategy
        - int m_wincount
        - int m_losecount
        - int m_gamecount
        + Hand* nextHand(void)
        + void win(void)
        + void lose(void)
        + void even(void)
        + std::string name(void)
        + std::string toString(void)
    }

    abstract StrategyInterface
    {
        + ~StrategyInterface()
        + virtual Hand* nextHand(void) = 0 
        + virtual void study(bool win) = 0
    }

    class WinningStrategy
    {
        + WinningStrategy(std::uint32_t seed)
        - std::mt19937 m_engine
        - bool m_won
        - Hand *prevHand
        + Hand* nextHand(void)
        + void study(bool win)
    }

    class ProbStrategy
    {
        + ProbStrategy(std::uint32_t seed)
        - std::mt19937 m_engine
        - int prevHandValue
        - int currentHandValue
        - int m_history[3][3]
        - int getSum(int hv)
        + Hand* nextHand(void)
        + void study(bool win)
    }
}

user --> Player : creates
user --> WinningStrategy : creates
user --> ProbStrategy : creates
note top on link #99FFFF
ユーザーは具体的な戦術を選ぶだけ
途中で変えることも可能
end note

Player o--> StrategyInterface : 移譲
note right on link #99FFFF
移譲(=弱い結びつき)の関係にあるのが
重要
end note
Player o--> Hand : 移譲

StrategyInterface <|-- WinningStrategy
StrategyInterface <|-- ProbStrategy

@enduml